--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello, World!</h1>
+        <div class ="name">
+            <h1>Phoebe's Website!</h1>
+        </div>
+        <div class= "photo">
+        </div>
+        <div class= "education">
+        </div>
+        <div class="work experience">
+        </div>
         <p>This is a basic webpage example.</p>
     </div>
 </body>
