--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>Phoebe's Website!</h1>
         </div>
         <div class= "photo">
+            <img src="climber.jpg" alt="climber">
         </div>
         <div class= "education">
         </div>
