--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Phoebe's Website!</h1>
         </div>
         <div class= "photo">
-            <img src="climber.jpg" alt="climber">
+            <img src="me.jpg" alt="climber">
         </div>
         <div class= "education">
         </div>
