--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class= "photo">
             <img src="me.jpg" alt="climber">
         </div>
+        <div class= "linkedin">
+            <a href="https://www.linkedin.com/in/phoebe-troup-galligan-52a0b8201/">my linkedin</a>
+        </div>
         <div class= "education">
         </div>
         <div class="work experience">
