--- a/index.html
+++ b/index.html
@@ -8,20 +8,28 @@
 </head>
 <body>
     <div class="container">
-        <div class ="name">
-            <h1>Phoebe's Website!</h1>
-        </div>
-        <div class= "photo">
-            <img src="me.jpg" alt="climber">
-        </div>
-        <div class= "linkedin">
-            <a href="https://www.linkedin.com/in/phoebe-troup-galligan-52a0b8201/">my linkedin</a>
+        <div class = "basic">
+            <div class ="name">
+                <h1>Phoebe's Website!</h1>
+            </div>
+            <div class= "photo">
+                <img src="me.jpg" alt="climber">
+            </div>
+            <div class= "linkedin">
+                <a href="https://www.linkedin.com/in/phoebe-troup-galligan-52a0b8201/">my linkedin</a>
+            </div>
         </div>
         <div class= "education">
+            <h2>I attended elementary, middle, and high school in Oakland, CA at Head Royce School. After graduating in 
+                2019 I began college at UC Berkeley, intending to study biology. However, after my first semester, 
+                I determined that I would rather study computer science and switched majors. I just finished the end of
+                my senior year and finishing off my degree requirements over the summer./h2>
+            <p>This is a basic webpage example.</p>
         </div>
         <div class="work experience">
+            <p>This is a basic webpage example.</p>
         </div>
-        <p>This is a basic webpage example.</p>
+        
     </div>
 </body>
 </html>
