--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
             </div>
         </div>
         <div class= "education">
-            <h2>I attended elementary, middle, and high school in Oakland, CA at Head Royce School. After graduating in 
+            <h2>My education!</h2>
+            <p>I attended elementary, middle, and high school in Oakland, CA at Head Royce School. After graduating in 
                 2019 I began college at UC Berkeley, intending to study biology. However, after my first semester, 
                 I determined that I would rather study computer science and switched majors. I just finished the end of
-                my senior year and finishing off my degree requirements over the summer./h2>
-            <p>This is a basic webpage example.</p>
+                my senior year and finishing off my degree requirements over the summer.</p>
         </div>
         <div class="work experience">
-            <p>This is a basic webpage example.</p>
+            <h2>My work experiences!</h2>
+            <p>Throughout my time at Cal I have held various roles related to both the rock climbing industry as well as software
+            engineering</p>
         </div>
         
     </div>
