--- a/index.html
+++ b/index.html
@@ -19,17 +19,30 @@
                 <a href="https://www.linkedin.com/in/phoebe-troup-galligan-52a0b8201/">my linkedin</a>
             </div>
         </div>
-        <div class= "education">
+        <div class= "info">
             <h2>My education!</h2>
             <p>I attended elementary, middle, and high school in Oakland, CA at Head Royce School. After graduating in 
                 2019 I began college at UC Berkeley, intending to study biology. However, after my first semester, 
                 I determined that I would rather study computer science and switched majors. I just finished the end of
                 my senior year and finishing off my degree requirements over the summer.</p>
         </div>
-        <div class="work experience">
+        <div class="info">
             <h2>My work experiences!</h2>
             <p>Throughout my time at Cal I have held various roles related to both the rock climbing industry as well as software
-            engineering</p>
+            engineering</p
+            <h3>Climbing Jobs</h3>
+            <ol>
+                <li>Front Desk Staff at Bridges Rock Gym</li>
+                <li>Front Desk Staff at Benchmark Climbing</li>
+                <li>Private Climbing Coach</li>
+            </ol>
+            <h3>Software Jobs</h3>
+            <ol>
+                <li>Software Engineering intern at Yext</li>
+                <li>CS61B Academic Intern</li>
+                <li>Website Development Assistant at Oaktown Boulders</li>
+            </ol>
+            
         </div>
         
     </div>
