--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="info">
             <h2>My work experiences!</h2>
             <p>Throughout my time at Cal I have held various roles related to both the rock climbing industry as well as software
-            engineering</p
+            engineering</p>
             <h3>Climbing Jobs</h3>
             <ol>
                 <li>Front Desk Staff at Bridges Rock Gym</li>
